--- a/src/Styles/ThreeDImaging.module.css
+++ b/src/Styles/ThreeDImaging.module.css
@@ -1,80 +1,83 @@
-@font-face {
-    font-family: "Cormorant";
-    src:url("/public/fonts/Cormorant/Cormorant-Regular.ttf") format("truetype") ;
+  @font-face {
+    font-family: "Jost";
+    src:url("/public/fonts/Jost/Jost-Regular.ttf") format("truetype") ;
     font-display: swap; 
     font-weight: normal; 
     font-style: normal; 
   }
+    @font-face {
+    font-family: "BebasNeue";
+    src:url("/public/fonts/Bebas_Neue/BebasNeue-Regular.ttf") format("truetype") ;
+    font-display: swap; 
+    font-weight: normal; 
+    font-style: normal; 
+    }
+
+
 
 .container{
+    position: relative;
     width: 100%;
     height: auto;
     min-height:100vh;
     display: flex;
     flex-direction: column;
-    padding-top: 5rem;
-    gap: 10rem;
+    overflow: hidden;
 }
 
 .endQuoteContainer{
     position: relative;
     width: 100%;
-    min-height: 50vh;
+    height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center; 
     flex-direction: column;
-    z-index: 10;
     pointer-events: none;
-    font-family: "Cormorant", serif;
+    font-family: "Jost", serif;
     text-transform:uppercase;
     color: black;
+    z-index: 1;
+    background: linear-gradient(
+    to bottom,
+    rgba(215, 209, 191, 1) 0%,
+    rgba(160, 180, 200, 1) 30%,
+    rgba(100, 140, 180, 1) 60%,
+    rgba(70, 110, 150, 1) 90%,
+    rgba(58, 95, 134, 1) 100%
+  );
 }
 
 .endQuote{
-    font-size: clamp(0.7rem, 0.614rem + 0.429vw, 1rem);
+    font-size: clamp(0.9rem, 0.729rem + 0.857vw, 1.5rem);
 }
 
 .endQuote2{
     font-size: clamp(4rem, 2.857rem + 5.714vw, 8rem);
-    letter-spacing:clamp(0.5rem, 0.357rem + 0.714vw, 1rem);
-    font-weight: 500;
+    letter-spacing:clamp(0.9rem, 0.729rem + 0.857vw, 1.5rem);
 }
-.endQuote span {
+
+.number{
+    font-size: clamp(2rem, 1.571rem + 2.143vw, 3.5rem);
+    font-family: 'BebasNeue', sans-serif;
+}
+
+.word{
     display: inline-block;
-  }
+}
 
 .imageWrapper{
-    position: relative;
+     position: relative;
     width: 100%;
-    height: auto;
-    min-height: 100vh;
+    height: 100vh;
     overflow: hidden;
-        background: linear-gradient(to bottom, 
+    background: linear-gradient(to bottom, 
           #3a5f86 5%, 
           #48719c 20%,
           #ADD8E6 60%, 
           #E0F7FA 70%, 
           #FFFFFF 100%
         );
-    
-}
-
-.imageBackContainer{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    
-}
-
-.imageBack{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
     
 }
 
@@ -93,4 +96,34 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+@media(max-width: 500px){
+    .container{
+    min-height: 75vh;
+    margin-top: 10rem;
+    }
+   .imageFore{
+    object-fit: contain;
+    scale: 1.5;
+   }
+.endQuoteContainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    
+   }
+   .editForMobile{
+    position: absolute;
+    top:0;
+
+   }
+   .imageWrapper{
+    height: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+   }
+
 }
