--- a/src/Styles/AutumnMobile.module.css
+++ b/src/Styles/AutumnMobile.module.css
@@ -13,15 +13,16 @@
     min-height: 100vh;
     overflow: hidden;
     top: 0;
-    background-color: #dfa579;
+    background-color: #183B4E;
   }
   
   /* Section Name Styles */
   .sectionName {
     width: 100%;
     position: relative;
+    margin-top: 5rem;
     font-size: clamp(2rem, 1.289rem + 3.556vw, 3rem);
-    color: beige;
+    color: white;
     text-align: center;
     font-family: "JuliusSansOne", sans-serif;
     cursor: default;
@@ -33,7 +34,7 @@
     position: relative;
     display: grid;
     margin-top: 5rem;
-    padding-bottom: 20rem;
+    margin-bottom: 5rem;
     grid-template-columns: 40% 60%;
     column-gap: 1rem;
     row-gap: 5rem;
@@ -44,7 +45,7 @@
   .imageinfo {
     position: relative;
     width: 100%;
-    border-top: 1px solid beige;
+    border-top: 1px solid white;
     transition: all 1s ease-in-out;
   }
   
@@ -52,7 +53,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    color: beige;
+    color: white;
     font-size: clamp(1rem, 0.289rem + 3.556vw, 2rem);
     font-family: "JuliusSansOne", sans-serif;
     display: flex;
@@ -66,7 +67,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    color: rgba(245, 245, 220, 0.67);
+    color: white;
     font-size: clamp(0.5rem, 0.358rem + 0.711vw, 0.7rem);
     font-weight: 500;
     font-family: "JuliusSansOne", sans-serif;
@@ -105,11 +106,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: beige;
+    color: white;
     font-family: "JuliusSansOne", sans-serif;
     font-size: 1.5rem;
     text-align: center;
-    background-color: #dfa579;
+    background-color: #574964;
   }
   
   /* Media Queries */
