--- a/src/Styles/SpringMobile.module.css
+++ b/src/Styles/SpringMobile.module.css
@@ -12,10 +12,11 @@
     min-height: 100vh;
     overflow: hidden;
     top: 0;
-    background-color: #A2A695;
+    background-color: #BCC2C3;
 }
 
 .sectionName {
+    margin-top: 5rem;
     width: 100%;
     position: relative;
     font-size: clamp(2rem, 1.289rem + 3.556vw, 3rem);
@@ -30,7 +31,7 @@
     position: relative;
     display: grid;
     margin-top: 5rem;
-    padding-bottom: 20rem;
+    margin-bottom: 5rem;
     grid-template-columns: 40% 60%;
     column-gap: 1rem;
     row-gap: 5rem;
