--- a/src/Styles/Starter.module.css
+++ b/src/Styles/Starter.module.css
@@ -15,14 +15,16 @@
   }
 
 .starter {
+    position: relative;
     width: 100vw;
     overflow-x: hidden;
     user-select: none;
-    
 }
+
 
 .videoContainer {
     position: relative;
+    z-index: 1;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -34,28 +36,25 @@
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    z-index: 0;
     pointer-events: none;
+    filter: brightness(0.8);
 }
-
 .quote{
-    position: fixed;
-    z-index: 10;
-    top: calc(35vh + 5rem);
+    position: relative;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     font-size: clamp(1.3rem, 0.957rem + 1.714vw, 2.5rem);
     font-family: "Kaushan Script", serif;
     cursor:default;
-    text-align: center;  
-    /* opacity: 0; */
+    text-align: center;
+    z-index: 9;
 }
 
 .quoteMobile{
-
-    position: fixed;
-    z-index: 10;
+    z-index: 9;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -103,82 +102,106 @@
 .template {
     position: relative;
     width: 100vw;
+    height: 110vh;
     z-index: 9;
-    background: linear-gradient(to bottom, rgba(189, 211, 229, 0) 0%, rgba(189, 211, 229, 0.3) 10%, rgba(189, 211, 229, 1) 50%, rgba(189, 211, 229, 1) 100%);
 }
 
 .whyShivira {
     position: absolute;
-    z-index: 0;
+    top:0;
+    left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(189, 211, 229, 0) 0%, rgba(189, 211, 229, 0.3) 20%, rgba(189, 211, 229, 1) 100%);
+    background: linear-gradient(to bottom, rgba(189, 211, 229, 0) 0%, rgba(189, 211, 229, 0.3) 10%, rgba(189, 211, 229, 1) 50%, rgba(189, 211, 229, 1) 100%);
     color: white;
     font-family: "Merienda", cursive;
     font-weight: 300;
     letter-spacing: 0.1rem;
     font-size: clamp(0.6rem, 0.457rem + 0.714vw, 1.1rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
     }
 
 .whyShiviraMobile{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
     color: white;
+    background: linear-gradient(to bottom, rgba(189, 211, 229, 0) 0%, rgba(189, 211, 229, 0.3) 10%, rgba(189, 211, 229, 1) 30%, rgba(189, 211, 229, 1) 100%); /*changed in mobile*/
     text-align: center;
     font-family: "Merienda", cursive;
-    width: 100vw;
     display: flex;
-    margin-bottom: 2rem;
-    font-size: 0.9rem;
-
-}
-
-.splitTextMobile{
-    display: flex;
-    width: 100vw;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    gap: 1rem;
+    gap: 3rem;
 }
+
+.Dcontainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.DsectionName {
+  margin-top: 10rem;
+  font-family: 'decorya','Arial Narrow', Arial, sans-serif;
+  font-size: clamp(2.5rem, 1.786rem + 3.571vw, 5rem);
+  letter-spacing: clamp(0.2rem, 0.114rem + 0.429vw, 0.5rem);
+  text-align: center;
+  overflow: hidden;
+  line-height: 0.8em;
+  padding-top: 1rem;
+  will-change: transform;
+}
+
+
 
 .splitTextMobile > p{
-    width: 80vw;
+    width: 80%;
     margin: 0 auto;
 }
 
 .splitText {
+    position: relative;
     display:inline-block;
     white-space: pre-wrap; 
     color: white;
     user-select:text;
     cursor:default;
+     text-align: center;
+     width: 70%;
+    margin: 0 auto;
   }
 
-  .splitText span {
+
+.splitText span {
     display: inline-block;
     opacity: inherit;
     opacity:0;
   }
 
-.whyShivira > div{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    top:50vh;
-    align-items: center;
-    text-align: center;
-   
-}
 
-.whyShivira p {
-    width: 70%;
-    margin: 0 auto;
-}
 
-.parentTemplate{
-    position: absolute;
-    width: 100%;
-    min-height: max-content;
-    z-index: -1;
-    top: 40%;
-}
 
+@media(max-width: 768px) {
+  .template{
+    height: 100vh;
+  }
+  .DsectionName{
+    margin-top: 0;
+    /* margin-bottom: 10rem; */
+  }
+}
