--- a/src/Styles/SummerMobile.module.css
+++ b/src/Styles/SummerMobile.module.css
@@ -11,11 +11,12 @@
     min-height: 100vh;
     overflow: hidden;
     top: 0;
-    background-image: linear-gradient(90deg, rgb(19, 30, 39) 0%, #517fa4 100%);
+    background-color: #A2A695;
 }
 
 .sectionName {
     width: 100%;
+    margin-top: 5rem;
     position: relative;
     font-size: clamp(2rem, 1.289rem + 3.556vw, 3rem);
     color: beige;
@@ -29,7 +30,7 @@
     position: relative;
     display: grid;
     margin-top: 5rem;
-    padding-bottom: 20rem;
+    margin-bottom: 5rem;
     grid-template-columns: 40% 60%;
     column-gap: 1rem;
     row-gap: 5rem;
