--- a/src/Styles/WinterMobile.module.css
+++ b/src/Styles/WinterMobile.module.css
@@ -14,6 +14,7 @@
     overflow: hidden;
     top:0;
     background-color: #BCC2C3;
+    overscroll-behavior:none;
 }
 
 .sectionName {
@@ -33,7 +34,7 @@
     position: relative;
     display: grid;
     margin-top: 5rem;
-    padding-bottom: 20rem;
+    margin-bottom: 5rem;
     grid-template-columns: 40% 60%;
     column-gap: 1rem;
     row-gap: 5rem;
@@ -45,6 +46,7 @@
     width: 100%;
     border-top: 1px solid #ffffff;
     transition: all 1s ease-in-out;
+    will-change: opacity;
   }
 
   .place{
@@ -79,6 +81,7 @@
 
 .char {
     display: inline-block;
+    will-change: opacity;
   }
 
  .imageContainer {
@@ -87,12 +90,14 @@
     height: 50vh;
     overflow: hidden;
     transition: all 1s ease-in-out;
+    will-change: opacity;
   }
 
   .image{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
   }
 
   
