--- a/src/Styles/SpringMobile.module.css
+++ b/src/Styles/SpringMobile.module.css
@@ -12,7 +12,7 @@
     min-height: 100vh;
     overflow: hidden;
     top: 0;
-    background-color: #BCC2C3;
+    background: linear-gradient(to bottom, #A2A695 60%, #B99470);
 }
 
 .sectionName {
