ADDED SEARCH FEATURE

--- a/src/Styles/DCardMobile.module.css
+++ b/src/Styles/DCardMobile.module.css
@@ -24,7 +24,6 @@
   width: 100vw;
   min-height: 100vh;
   overflow: hidden;
-  z-index: 900; /* Matches DCard.js */
 }
 
 .brand {
@@ -48,7 +47,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%;
+  min-width:max-content;
   padding: 1rem;
   text-align: left;
   color: white;
@@ -61,15 +60,11 @@
   text-shadow: 1px 1px 5px black;
 }
 
-.itinerary:disabled {
-  cursor: not-allowed;
-}
-
 .next {
   position: fixed;
   bottom: 0;
   right: 0;
-  width: 100%;
+  min-width: max-content;
   padding: 1rem;
   text-align: right;
   color: white;
