--- a/src/Styles/DCard.module.css
+++ b/src/Styles/DCard.module.css
@@ -119,13 +119,15 @@
 }
 
 .itinerary {
-  font-weight: 500;
+  font-weight: 900;
   font-size: clamp(0.8rem, 0.571rem + 0.476vw, 1rem);
   font-family: "Quicksand", sans-serif;
   cursor: pointer;
   border: none;
   background-color: transparent;
   opacity: 0.5;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
 }
 
 .itinerary:disabled {
@@ -195,6 +197,8 @@
   text-align: center;
   flex-shrink: 0;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
 }
 
 .next:focus-visible {
@@ -228,6 +232,27 @@
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.gettingBack{
+  z-index: 11;
+  position: fixed;
+  bottom: 0;
+  padding: 1rem;
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  font-family: "sabur";
+  font-size: 1.3rem;
+  letter-spacing: 0rem;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  border:none;
+  background: linear-gradient(45deg, #ffffff, #cccccc);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
 }
 
 .highlightsWrapper {
